Styles/style.css
/* ============= Global Styles ============ */

* {
    font-family: lato, sans-serif;
    margin: 0;
    padding: 0;
}

/* Color Palletes */
.primary-color {
    color: #E55473;
}

.secondary-color{
    color: #FCEEF1;
}

.heading-color{
    color: #272727;
}

.text-color{
    color: #272727;
}

.white{
    color:#fff
}

/* Heading & Text styles */

.primary-heading{
    font-size: 40px;
    line-height: normal;
    font-weight: 800;
}

.secondary-heading{
    font-size: 24px;
    line-height: 35px;
    font-weight: 700;
    text-decoration: underline;
}

.text{
    font-size: 18px;
    font-weight: 400;
    line-height: 30px;
}

/* Button styles */

.primary-btn{
    background-color: #E55473;
    color: #fff;
    padding: 15px 40px;
    border:none;
    border-radius: 8px;
    font-size: 20px;
    margin-top: 10px;
    display: block;
}

/* Hero Section Styles */
.hero-section{
    padding: 100px 0 0;
    background-color: #FCEEF1;
}

.hero-wrap{
    display: flex;
    justify-content: space-between;
    max-width: 1200px;
    margin: 0 auto;
    max-height: 500px;
}
.left-col{
    width: 40%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: left;
    gap: 20px;
    margin: auto 0;
}

.hero-wrap img{
    width: 500px;
    height: auto;
}

/* Featured Flowers Section Styles */

.featured-flowers{
    max-width: 1200px;
    padding: 100px 0;
    display: flex;
    gap: 20px;
    margin: 0 auto;
    flex-direction: column;
    text-align: center;
}

.featured-flowers h2, p{
    width: 60%;
    margin: 0 auto;
}

.featured-flowers p{
    margin-bottom: 30px;
}

.featured-items-wrap{
    display: flex;
    justify-content: space-between;

}

.featured-item{
    background-color: #FCEEF1;
    padding: 60px 40px 0 40px;
    border-radius: 150px 150px 0 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    text-align: center;
    align-items: space-between;
    position: relative;
}

.featured-item img{
    width: 150px;
    height: auto;
}

.featured-item h3{
    position: absolute;
    left: 0;
    right: 0;
    bottom: -50px;
    text-align: center;
}

